# shiwujie

./: .gitattributes  .gitignore  CLAUDE.md  README.md  how 3dcf577  package-lock.json
.githooks/: pre-push
config/: .env.example
docker/: docker-compose.yml
docs/: CHANGELOG.md  README.md  (+2 more)
shiwujie-ai/: .gitignore  Dockerfile  README.md  pyproject.toml
shiwujie-ai/data/fc_cases/: adversarial.yaml  clean.yaml
shiwujie-ai/docs/: README.md  deployment.md  design.md  fallback.md  known-issues.md
shiwujie-ai/scripts/: start.sh
shiwujie-ai/src/shiwujie_ai/: __init__.py  __main__.py  config.py  constants.py  llm.py  streaming.py
shiwujie-ai/src/shiwujie_ai/graph/: __init__.py  budget.py  fake.py  graph.py  nodes.py  prompts.py  state.py
shiwujie-ai/src/shiwujie_ai/kb/: __init__.py  store.py
shiwujie-ai/src/shiwujie_ai/kb/docs/: emergency-help.md  join-family.md  navigation.md  take-photo.md  volunteer-call.md
shiwujie-ai/src/shiwujie_ai/memory/: __init__.py  compress.py  extractor.py  preference.py  summarizer.py
shiwujie-ai/src/shiwujie_ai/safety/: __init__.py  emergency.py  whitelist.py
shiwujie-ai/src/shiwujie_ai/service/: __init__.py  app.py
shiwujie-ai/src/shiwujie_ai/skills/: __init__.py  loader.py
shiwujie-ai/src/shiwujie_ai/skills/navigation/: SKILL.md
shiwujie-ai/src/shiwujie_ai/spikes/: __init__.py
shiwujie-ai/src/shiwujie_ai/spikes/e2e_real/: __init__.py  run.py
shiwujie-ai/src/shiwujie_ai/spikes/fc/: __init__.py  __main__.py  cases.py  report.py  runner.py  scorer.py  stubs.py
shiwujie-ai/src/shiwujie_ai/spikes/mcp_client/: __main__.py  business_check.py  connect.py  whoami.py
shiwujie-ai/src/shiwujie_ai/tools/: __init__.py  gaode.py  java_mcp.py  native.py  read_skill.py  registry.py  searchapi.py  stubs.py  vlm.py
shiwujie-ai/tests/: test_budget.py  test_compress.py  test_emergency.py  test_encode.py  test_extractor.py  test_gaode.py  test_graph_mvp.py  test_kb.py  test_navigation.py  test_preference.py  test_registry.py  test_searchapi.py  test_service.py  test_summarizer.py  test_vlm.py  test_whitelist.py
(+1081 files in other folders)
