[project]
name = "shiwujie-ai"
version = "0.1.0"
description = "视无界 AI 服务 — Phase 5 chunk-1 spikes（qwen function-calling 可靠性 + Java MCP 依赖共存）。生产 graph/服务骨架在 chunk-2。"
readme = "README.md"
requires-python = ">=3.10"
# spike-only 依赖：本块不装 langgraph / fastapi / uvicorn / redis / rank-bm25 / 高德 SDK。
# langchain-mcp-adapters 钉 0.3.0（2026-06-10，PR#541 non-deprecated streamable HTTP client，缝 C 必需）。
dependencies = [
    "langchain-openai>=0.3",
    "langchain-mcp-adapters==0.3.0",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "httpx>=0.27",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shiwujie_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
