[project]
name = "shiwujie-ai"
version = "0.1.0"
description = "视无界 AI 服务 — Phase 5 chunk-2a：LangGraph 智能体生产实现（graph + FastAPI + 工具 + skill + BM25 KB + 两层记忆）。chunk-1 spikes 在 src/shiwujie_ai/spikes/。"
readme = "README.md"
requires-python = ">=3.10,<3.14"
# langchain-mcp-adapters 钉 0.3.0（2026-06-10，PR#541 non-deprecated streamable HTTP client，缝 C 必需）。
# chunk-2a 新增：langgraph（graph + checkpointer）/ langgraph-checkpoint-redis（Redis checkpoint）
#   / fastapi + uvicorn（HTTP 服务）/ redis（checkpoint store + 偏好层）/ rank-bm25（KB 检索）。
# 高德/searchapi 用已有 httpx 自建 REST wrapper（不引官方 MCP/SDK，design ⑦）。
dependencies = [
    "langchain-openai>=0.3",
    "langchain-mcp-adapters==0.3.0",
    "langgraph>=0.2.50",
    "langgraph-checkpoint-redis>=0.5.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "redis>=5.0.0",
    "pydantic>=2.7,<3",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "rank-bm25>=0.2.2",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/shiwujie_ai"]

[tool.pytest.ini_options]
testpaths = ["tests"]
